add: root_privilege_account_detection.sh
